--- a/.github/workflows/Nightly_Build.yaml
+++ b/.github/workflows/Nightly_Build.yaml
@@ -2,7 +2,7 @@ name: Nightly Build and Push to DockerHub
 
 on:
   schedule:
-    - cron: "45 8 * * *"  # Runs every day at 12 AM UTC
+    - cron: "*/5 * * * *"  # Runs every day at 12 AM UTC
   workflow_dispatch:  # Allows manual trigger
 
 jobs:
@@ -24,6 +24,20 @@ jobs:
           pip install -r requirements.txt  
 
       - name: Run Tests
+        with:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
+          JWT_ALGORITHM: ${{ secrets.JWT_ALGORITHM }}
+          REDIS_HOST: ${{ secrets.REDIS_HOST }}
+          REDIS_PORT: ${{ secrets.REDIS_PORT }}
+          REDIS_URL: ${{ secrets.REDIS_URL }}
+          MAIL_USERNAME: ${{ secrets.MAIL_USERNAME }}
+          MAIL_PASSWORD: ${{ secrets.MAIL_PASSWORD }}
+          MAIL_SERVER: ${{ secrets.MAIL_SERVER }}
+          MAIL_PORT: ${{ secrets.MAIL_PORT }}
+          MAIL_FROM: ${{ secrets.MAIL_FROM }}
+          MAIL_FROM_NAME: ${{ secrets.MAIL_FROM_NAME }}
+          DOMAIN: ${{ secrets.DOMAIN }}
         run: |
           pytest 
 
@@ -70,7 +84,7 @@ jobs:
           body: "The nightly build for the repository has failed. Check GitHub Actions for details."
 
   email-success:
-    name: Email on Failure
+    name: Email on Success
     runs-on: ubuntu-latest
     if: success()
     steps:
