--- a/.github/workflows/Nightly_Build.yaml
+++ b/.github/workflows/Nightly_Build.yaml
@@ -2,7 +2,7 @@ name: Nightly Build and Push to DockerHub
 
 on:
   schedule:
-    - cron: "0 15 * * *"  # Runs every day at 12 AM UTC
+    - cron: "0 18 * * *"  # Runs every day at 12 AM UTC
   workflow_dispatch:  # Allows manual trigger
 
 jobs:
@@ -86,12 +86,12 @@ jobs:
       - name: Build and Push Web Image
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-beyond-crud-web:nightly -f Dockerfile .
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-beyond-crud-web:nightly
+          docker pushes ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-beyond-crud-web:nightly
 
       - name: Build and Push Celery Image
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-beyond-crud-celery:nightly -f Dockerfile .
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-beyond-crud-celery:nightly
+          docker pushes ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-beyond-crud-celery:nightly
       
       - name: Send success email if images were successfully pushed
         if: success()
@@ -102,7 +102,7 @@ jobs:
           username: chance.hintz38@ethereal.email
           password: z7UrtPGsrn7zFKMRKD
           subject: "✅ Nightly Build - Docker Images Pushed Successfully!"
-          to: "user@example.com"
+          to: "lsng@dons.usfca.edu"
           from: "GitHub Actions <noreply@github.com>"
           body: "The nightly build was successful, and the Docker images have been pushed to DockerHub."
 
@@ -115,6 +115,6 @@ jobs:
           username: chance.hintz38@ethereal.email
           password: z7UrtPGsrn7zFKMRKD
           subject: "❌ Nightly Build - Docker Image Push Failed!"
-          to: "user@example.com"
+          to: "lsng@dons.usfca.edu"
           from: "GitHub Actions <noreply@github.com>"
           body: "The nightly build failed to push the Docker images to DockerHub. Please investigate the issue."
