--- a/.github/workflows/Nightly_Build.yaml
+++ b/.github/workflows/Nightly_Build.yaml
@@ -2,7 +2,7 @@ name: Nightly Build and Push to DockerHub
 
 on:
   schedule:
-    - cron: "28 18 * * *"  # Runs every day at 12 AM UTC
+    - cron: "0 19 * * *"  # Runs every day at 12 AM UTC
   workflow_dispatch:  # Allows manual trigger
 
 jobs:
@@ -41,19 +41,6 @@ jobs:
         run: |
           pytest 
 
-      - name: Send success email if tests pass
-        if: success()
-        uses: dawidd6/action-send-mail@v4
-        with:
-          server_address: smtp.ethereal.email
-          server_port: 587
-          username: chance.hintz38@ethereal.email
-          password: z7UrtPGsrn7zFKMRKD
-          subject: "✅ Nightly Build - Tests Passed!"
-          to: "lsng@dons.usfca.edu"
-          from: "GitHub Actions <noreply@github.com>"
-          body: "Great news! The nightly build tests have passed successfully. Proceeding to the Docker image build and push."
-
       - name: Send failure email if tests fail
         if: failure()
         uses: dawidd6/action-send-mail@v4
@@ -86,25 +73,12 @@ jobs:
       - name: Build and Push Web Image
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-beyond-crud-web:nightly -f Dockerfile .
-          docker pushes ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-beyond-crud-web:nightly
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-beyond-crud-web:nightly
 
       - name: Build and Push Celery Image
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-beyond-crud-celery:nightly -f Dockerfile .
-          docker pushes ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-beyond-crud-celery:nightly
-      
-      - name: Send success email if images were successfully pushed
-        if: success()
-        uses: dawidd6/action-send-mail@v4
-        with:
-          server_address: smtp.ethereal.email
-          server_port: 587
-          username: chance.hintz38@ethereal.email
-          password: z7UrtPGsrn7zFKMRKD
-          subject: "✅ Nightly Build - Docker Images Pushed Successfully!"
-          to: "lsng@dons.usfca.edu"
-          from: "GitHub Actions <noreply@github.com>"
-          body: "The nightly build was successful, and the Docker images have been pushed to DockerHub."
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-beyond-crud-celery:nightly
 
       - name: Send failure email if image push fails
         if: failure()
@@ -117,4 +91,4 @@ jobs:
           subject: "❌ Nightly Build - Docker Image Push Failed!"
           to: "lsng@dons.usfca.edu"
           from: "GitHub Actions <noreply@github.com>"
-          body: "The nightly build failed to push the Docker images to DockerHub. Please investigate the issue."
+          body: "The nightly build failed to push one or more Docker images to DockerHub. Please investigate the issue."
