--- a/.github/workflows/Nightly_Build.yaml
+++ b/.github/workflows/Nightly_Build.yaml
@@ -2,7 +2,7 @@ name: Nightly Build and Push to DockerHub
 
 on:
   schedule:
-    - cron: "25 4 * * *"  # Runs every day at 12 AM UTC
+    - cron: "40 5 * * *"  # Runs every day at 12 AM UTC
   workflow_dispatch:  # Allows manual trigger
 
 jobs:
@@ -73,12 +73,12 @@ jobs:
       - name: Build and Push Web Image
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-beyond-crud-web:nightly -f Dockerfile .
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-beyond-crud-web:nightly
+          docker pushes ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-beyond-crud-web:nightly
 
       - name: Build and Push Celery Image
         run: |
           docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-beyond-crud-celery:nightly -f Dockerfile .
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-beyond-crud-celery:nightly
+          docker pushes ${{ secrets.DOCKERHUB_USERNAME }}/fastapi-beyond-crud-celery:nightly
 
       - name: Send failure email if image push fails
         if: failure()
